flags: hfp_client_disconnecting_state
Bug: 366041766
Bug: 235893458
Bug: 315241296
Test: m service-bluetooth
Change-Id: Iefd7f65203d3a04cf7b0e86d24c900defaf8d067

--- a/flags/BUILD.gn
+++ b/flags/BUILD.gn
@@ -22,6 +22,7 @@ aconfig("bluetooth_flags_c_lib") {
     "hap.aconfig",
     "hci.aconfig",
     "hfp.aconfig",
+    "hfpclient.aconfig",
     "hid.aconfig",
     "l2cap.aconfig",
     "le_advertising.aconfig",
